fixed z-index of mobile nav

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -49,7 +49,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0 32px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .separator {
